--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.1.0",
     "@primeng/themes": "^19.0.6",
     "@tailwindcss/postcss": "^4.0.6",
+    "bootstrap": "^5.3.5",
     "postcss": "^8.5.2",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
